tests/rosetta/out/C/additive-primes.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:40Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:40Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int isPrime(int n) {
  if (n < 2) {
    return 0;
  }
  if (n % 2 == 0) {
    return n == 2;
  }
  if (n % 3 == 0) {
    return n == 3;
  }
  int d = 5;
  while (d * d <= n) {
    if (n % d == 0) {
      return 0;
    }
    d = d + 2;
    if (n % d == 0) {
      return 0;
    }
    d = d + 4;
  }
  return 1;
}

int sumDigits(int n) {
  int s = 0;
  int x = n;
  while (x > 0) {
    s = s + x % 10;
    x = (int)((((double)x) / ((double)10)));
  }
  return s;
}

const char *pad(int n) {
  if (n < 10) {
    char *tmp1 = _str(n);
    char *tmp2 = concat_string("  ", tmp1);
    return tmp2;
  }
  if (n < 100) {
    char *tmp3 = _str(n);
    char *tmp4 = concat_string(" ", tmp3);
    return tmp4;
  }
  char *tmp5 = _str(n);
  return tmp5;
}

int main() {
  printf("Additive primes less than 500:\n");
  int count = 0;
  const char *line = "";
  int lineCount = 0;
  int i = 2;
  while (i < 500) {
    if (isPrime(i) && isPrime(sumDigits(i))) {
      count = count + 1;
      line = line + pad(i) + "  ";
      lineCount = lineCount + 1;
      if (lineCount == 10) {
        printf("%s\n", slice_string(line, 0, strlen(line) - 2));
        line = "";
        lineCount = 0;
      }
    }
    if (i > 2) {
      i = i + 2;
    } else {
      i = i + 1;
    }
  }
  if (lineCount > 0) {
    printf("%s\n", slice_string(line, 0, strlen(line) - 2));
  }
  char *tmp6 = _str(count);
  char *tmp7 = concat_string(tmp6, " additive primes found.");
  printf("%s\n", tmp7);
}

int main() {
  main();
  return 0;
}
